# linear-python-sdk

./: Linear-API@current--#@!api!@#.json  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py  clean_example_issues.py  issue_collaboration.py  team_management.py
linear/: __init__.py  client.py  config.py  errors.py
linear/api/: attachments.py  comments.py  issues.py  teams.py  users.py  workflow_states.py
linear/models/: attachment.py  base.py  comment.py  issue.py  team.py  user.py  workflow_state.py
linear/utils/: graphql.py
tests/: test_client.py  test_issues.py
