[project]
name = "linear-python-sdk"
version = "0.1.0"
description = "Python SDK for Linear API"
authors = [
    {name = "Amit Segev"}
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "graphql-core>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3 